Fix some issues around GroupingCompilers and compiler names
- Introduce GroupingPackageCompilers and PackageCompilerNameDefinition
- Extract default implementation for compiler name
- Compilers managed via a GroupingCompiler are recompiled together